kustomize/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Trilium
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: trilium.png
    gethomepage.dev/name: Trilium-Notes
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
  labels:
    app.kubernetes.io/instance: trilium-notes
    app.kubernetes.io/name: trilium-notes
    argocd.argoproj.io/instance: trilium-notes
  name: trilium-notes
spec:
  ingressClassName: nginx
  rules:
    - host: trilium.$YOUR_DOMAIN_NAME.com
      http:
        paths:
          - backend:
              service:
                name: trilium-notes
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - trilium.$YOUR_DOMAIN_NAME.com
      secretName: trilium-tls
